syntax = "proto3";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";

message Token {
  uint64 id = 1 [ (gogoproto.jsontag) = "id" ];
  string plain_text = 2 [ (gogoproto.jsontag) = "content" ];
  string hash_data = 3 [ (gogoproto.jsontag) = "hash_data" ];
  bool trusty = 4 [ (gogoproto.jsontag) = "trusty" ];
}

message Stat {
  uint64 id = 1 [ (gogoproto.jsontag) = "id" ];
  uint64 succeed = 2 [ (gogoproto.jsontag) = "succeed" ];
  uint64 failed = 3 [ (gogoproto.jsontag) = "failed" ];
}